Fixed wrong items in theorems

--- a/paper.tex
+++ b/paper.tex
@@ -26,6 +26,9 @@
 \newtheorem{example}[lm]{Example} \Crefname{example}{Example}{Examples}
 \theoremstyle{remark} \newtheorem{rk}[lm]{Remark} \Crefname{rk}{Remark}{Remarks}
 
+\renewcommand{\labelenumi}{\theenumi{\rm)}}
+\renewcommand{\theenumi}{\alph{enumi}}
+
 %Page layout
 \textwidth 16cm 
 \textheight 22cm 
