Fixed minor bugs discovered after publication is complete

--- a/paper.bib
+++ b/paper.bib
@@ -29,7 +29,10 @@ journal = {J. Pure Appl. Algebra}}
 @online{Lav2,
 author = {Lavrenov, A.},
 title  = {A local--global principle for symplectic $\Kt$},
-journal = {to appear}}
+archivePrefix = "arXiv",
+eprint = "1606.06548",
+primaryClass = "math.KT",
+year = {2016}}
 
 @online{LaRSS,
 author = {Lavrenov, A.},
