--- a/paper.tex
+++ b/paper.tex
@@ -143,7 +143,7 @@ is defined by generators $x_\alpha(r)$, $\alpha\in\Phi$, $r\in R$ and the follow
 \begin{align}
  x_\alpha(r) x_\alpha(s) & = x_\alpha(r+s), & \nonumber \\
  [x_\alpha(r),  x_\beta(s)] & = x_{\alpha+\beta}(N_{\alpha,\beta}\cdot rs), &\ \alpha,\beta\in \Phi,\ \alpha+\beta\in\Phi, \nonumber \\
- [x_\alpha(r),  x_\beta(s)] & = 1, &\ \alpha,\beta\in \Phi,\ \alpha+\beta\not\in\Phi. \nonumber
+ [x_\alpha(r),  x_\beta(s)] & = 1, &\ \alpha,\beta\in \Phi,\ \alpha \perp \beta. \nonumber
 \end{align}
 Here $N_{\alpha,\beta}$ are the structure constants of $\Phi$ which are equal to $\pm 1$.
 We use a more familiar notation for root unipotents in the case $\Phi=\rA_\ell$:
@@ -206,12 +206,12 @@ In fact, one can show that Tulenbaev lifting property implies that the relative 
 To see this, notice that the commutativity of the top (resp. bottom) triangle implies that left arrow is injective (resp. surjective).
 
 We claim that the main results of this paper follow from Tulenbaev's lifting property.
-\begin{prop} For any irreducible $\Phi$ of rank $\geq 2$ hold implications $a) \implies b) \implies c) \implies d)$.
+\begin{prop} For any irreducible $\Phi$ of rank $\geq 2$ hold implications \[a) \implies b) \implies c) \implies d).\]
 \begin{enumerate}
- \item the Steinberg group functor $\St(\Phi, -)$ satisfies lifting property~\eqref{eq:diagram};
- \item a dilation principle holds for $\St(\Phi, -)$, i.\,e. if $g\in\St(\Phi, A[X], XA[X])$ is such that $\lambda_a^*(g) = 1 \in \St(\Phi, R_a[X])$ then
+ \item The Steinberg group functor $\St(\Phi, -)$ satisfies lifting property~\eqref{eq:diagram};
+ \item A dilation principle holds for $\St(\Phi, -)$, i.\,e. if $g\in\St(\Phi, A[X], XA[X])$ is such that $\lambda_a^*(g) = 1 \in \St(\Phi, R_a[X])$ then
        for a sufficiently large $n$ one has $ev_{X = a^n Y}^*(h) = 1 \in \St(\Phi, A[Y])$, where $ev_{X=a^n Y}$ denotes the unique $R$-algebra morphism $R[X]\to R[Y]$ sending $X$ to $a^nY$;
- \item the assertion of \cref{tm:lg-principle} holds for $\St(\Phi, -)$;
+ \item The assertion of \cref{tm:lg-principle} holds for $\St(\Phi, -)$;
  \item $\Kt(\Phi, R)$ is a central subgroup of $\St(\Phi, R)$.
 \end{enumerate} \end{prop}
 \begin{proof} The specified implications are contained in the proofs of Lemma~15, Theorem~2 and Theorem~1 of \cite{SCh}, respectively. \end{proof}
