--- a/paper.tex
+++ b/paper.tex
@@ -143,7 +143,7 @@ is defined by generators $x_\alpha(r)$, $\alpha\in\Phi$, $r\in R$ and the follow
 \begin{align}
  x_\alpha(r) x_\alpha(s) & = x_\alpha(r+s), & \nonumber \\
  [x_\alpha(r),  x_\beta(s)] & = x_{\alpha+\beta}(N_{\alpha,\beta}\cdot rs), &\ \alpha,\beta\in \Phi,\ \alpha+\beta\in\Phi, \nonumber \\
- [x_\alpha(r),  x_\beta(s)] & = 1, &\ \alpha,\beta\in \Phi,\ \alpha \perp \beta. \nonumber
+ [x_\alpha(r),  x_\beta(s)] & = 1, &\ \alpha,\beta\in \Phi,\ \alpha, \beta \not \in \Phi \cup \{0\}. \nonumber
 \end{align}
 Here $N_{\alpha,\beta}$ are the structure constants of $\Phi$ which are equal to $\pm 1$.
 We use a more familiar notation for root unipotents in the case $\Phi=\rA_\ell$:
