Fixed more types

--- a/paper.tex
+++ b/paper.tex
@@ -42,7 +42,7 @@
 \newcommand{\Ker}{\mathop{\mathrm{Ker}}\nolimits}
 \newcommand{\Cent}{\mathop{\mathrm{Cent}}\nolimits}
 \newcommand{\E}{{\mathrm{E}}}
-\newcommand{\GG}{{\mathrm{G}_{sc}}}
+\newcommand{\GG}{{\mathrm{G}_{\mathrm{sc}}}}
 \newcommand{\Um}{\mathop{\mathrm{Um}}\nolimits}
 \newcommand{\St}{\mathop{\mathrm{St}}\nolimits}
 \newcommand{\Sp}{\mathop{\mathrm{Sp}}\nolimits}
@@ -170,7 +170,7 @@ $$\{X(u,\,v)\mid u\in\Um(n,\,R),\ v\in R^n,\ u^tv=0\}$$ and relations:
 &X(u,\,v)X(u,\,w)=X(u,\,v+w), \label{add1} \\
 &X(u,\,v)X(u',\,v')X(u,\,v)\inv=X(t(u,\,v)u',\,t(u,\,v)^* v'). \label{conj1}
 \end{align}
-In the above formula $t(v,\,u)^*$ denotes the corresponding contragradient matrix, i.\,e. $t(v,\,u)^* = t(v,\,u)\inv = t(v,\,-u)$.
+In the above formula $t(v,\,u)^*$ denotes the corresponding contragradient matrix, i.\,e. $t(u,\,v)^* = t(v,\,u)\inv = t(v,\,-u)$.
 We employ the same notation for contragradient matrices below, i.\,e. for $M\in\E(n,R)$ we set $M^* = (M^t)\inv$.
 
 The above presentation clearly implies that $\phi\colon\St(n,\,R)\rightarrow\E(n,\,R)$ is a central extension.
